--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,45 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00FFFFFF"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <Button
+        android:id="@+id/butCads"
+        android:layout_width="140dp"
+        android:layout_height="49dp"
+        android:text="CADASTRO"
+        android:textColor="#000000"
+        app:backgroundTint="#FDD900"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/butLogin"
+        app:layout_constraintVertical_bias="0.209" />
+
+    <Button
+        android:id="@+id/butLogin"
+        android:layout_width="140dp"
+        android:layout_height="49dp"
+        android:layout_marginBottom="192dp"
+        android:text="LOGIN"
+        android:textColor="#000000"
+        app:backgroundTint="#FDD900"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="389dp"
+        android:layout_height="468dp"
+        app:layout_constraintBottom_toTopOf="@+id/butLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.39"
+        app:srcCompat="@drawable/vanapp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
