--- a/app/src/main/res/layout/activity_lista_vans.xml
+++ b/app/src/main/res/layout/activity_lista_vans.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:orientation="vertical"
@@ -67,18 +67,29 @@
                 android:layout_height="wrap_content"
                 android:indeterminateTint="#FDD900"
                 android:progressTint="#040000"
-                android:visibility="invisible"
-                />
+                android:visibility="invisible" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
 
 
         </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/checkBox"
+        <LinearLayout
+            android:id="@+id/myvans"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:text="CheckBox" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:text="CheckBox" />
+        </LinearLayout>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
