--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,76 +5,108 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#000"
+    android:background="#000"
     tools:context=".Login">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_height="match_parent"
         android:orientation="vertical"
+        android:backgroundTint="#000"
+        android:background="#000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        >
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="0dp"
             android:layout_marginTop="0dp"
-            android:text="@string/UserText"
-            android:textAlignment="center"
-            android:textSize="34sp" />
+            android:background="@drawable/custom_edit_text"
+            app:cardCornerRadius="30dp">
 
-        <EditText
-            android:id="@+id/user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:ems="10"
-            android:hyphenationFrequency="normal"
-            android:inputType="text"
-            android:selectAllOnFocus="true"
-            android:singleLine="true"
-            android:text="victor_user" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/custom_edit_text"
+                android:gravity="center|center_vertical"
+                android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="@string/PasswordText"
-            android:textAlignment="center"
-            android:textSize="34sp" />
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="273dp"
+                    android:layout_height="258dp"
+                    android:scaleX="1"
+                    android:scaleY="1"
+                    app:srcCompat="@drawable/vanapp" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:text="password_victor" />
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:text="@string/UserText"
+                    android:textAlignment="center"
+                    android:textSize="34sp" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="40dp"
-            android:indeterminateTint="#FDD900"
-            android:progressTint="#040000"
-            android:visibility="invisible" />
+                <EditText
+                    android:id="@+id/user"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:ems="10"
+                    android:hyphenationFrequency="normal"
+                    android:inputType="text"
+                    android:selectAllOnFocus="true"
+                    android:singleLine="true"
+                    android:text="victor_user"
+                    android:textAlignment="center" />
 
-        <Button
-            android:id="@+id/butEntrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ENTRAR"
-            android:textColor="#000000"
-            app:backgroundTint="#FDD900" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:text="@string/PasswordText"
+                    android:textAlignment="center"
+                    android:textSize="34sp" />
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:ems="10"
+                    android:inputType="textPassword"
+                    android:text="password_victor"
+                    android:textAlignment="center" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:indeterminateTint="#FDD900"
+                    android:progressTint="#040000"
+                    android:visibility="invisible" />
+
+                <Button
+                    android:id="@+id/butEntrar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ENTRAR"
+                    android:textColor="#000000"
+                    app:backgroundTint="#FDD900" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
