--- a/app/src/main/res/layout/activity_lista_vans.xml
+++ b/app/src/main/res/layout/activity_lista_vans.xml
@@ -50,7 +50,7 @@
                     android:layout_weight="1" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/rmvButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="0dp"
